--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,16 @@
     <groupId>org.example</groupId>
     <artifactId>springboot-course-2021</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
         <maven.compiler.target>11</maven.compiler.target>
     </properties>
+    <modules>
+        <module>mybatis-examples</module>
+        <module>cache-examples</module>
+        <module>jpa-examples</module>
+    </modules>
 
 </project>
