--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
         <module>jpa-examples</module>
         <module>spring-examples</module>
         <module>springmvc-examples</module>
+        <module>backend-examples</module>
     </modules>
 
 </project>
